--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"postcss": "^8.4.8",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"swr": "^1.2.2",
 		"tailwindcss": "^3.0.23",
 		"web3": "^1.7.1"
 	}
