--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"dev": "next dev"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.5.0",
 		"@heroicons/react": "^1.0.6",
 		"@metamask/detect-provider": "^1.2.0",
 		"autoprefixer": "^10.4.2",
